# ZPR-2020Z

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp  requirements.txt
.github/workflows/: main.yml
atomic/: CMakeLists.txt  Dockerfile
atomic-list/: Dockerfile
atomic-list/src/: CMakeLists.txt  fun.cpp  fun.h
atomic-list/test/: CMakeLists.txt  test.cpp
atomic/src/: CMakeLists.txt  bdir_list_node.cpp  bdir_list_node.hpp  bidir_list_interface.cpp  bidir_list_interface.hpp  forward_list.h  forward_list.hpp  list.h  list.hpp  thread_policy.h
atomic/test/: CMakeLists.txt  forward_list_test.cpp  forward_list_threads_test.cpp  list_test.cpp  test.cpp
atomic/test-coverage/: Dockerfile  run-tests-and-coverage.sh
scripts/: clang-format.sh  clang-tidy.sh  run-coverage.sh
test/: CMakeLists.txt  test.cpp
